added detail activity class and xml file

--- a/InteractiveMapSJSU/app/src/main/res/values/strings.xml
+++ b/InteractiveMapSJSU/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">InteractiveMapSJSU</string>
     <string name="search_by_building_abbreviation">Search by building abbreviation</string>
+    <string name="street_view">Street View</string>
+    <string name="building_name">Building Name</string>
 </resources>
