--- a/InteractiveMapSJSU/app/src/main/res/values/strings.xml
+++ b/InteractiveMapSJSU/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="building_name">Building Name</string>
     <string name="location_services_lat">location_services_lat</string>
     <string name="location_services_long">location_services_long</string>
+    <string name="engineering_building_name">Engineering Building</string>
+    <string name="engg_building_address">San José State University Charles W. Davidson College of Engineering, 1 Washington Square, San Jose, CA 95112</string>
+    <string name="library_name">King Library</string>
+    <string name="library_address">Dr. Martin Luther King, Jr. Library, 150 East San Fernando Street, San Jose, CA 95112</string>
 </resources>
